Drafted design and progress  section

--- a/_posts/2022-04-24-team15-vqpy.md
+++ b/_posts/2022-04-24-team15-vqpy.md
@@ -25,8 +25,62 @@ TODO(Shi)
 
 ## Language Design
 
-TODO(Pengzhan)
+We treat video analytics queries as user-defined functions, scanning through a sequence (or multiple sequences) of frames. Different from existing SQL-like language, such as Blazelt, the user-defined function in VQPy can be stateful, which means it can carry historical information like trajectories of objects. Users will use VQPy, as the language for these functions.
+
+```python
+class Query:
+  def __call__(frame: Frame) -> Any: ...
+```
+
+VQPy is designed to be as close to Python. Instead of implementing the query imperatively, VQPy allows users to declare sub-tasks in queries. Specifically, users can use declared "abstract functions" with only type information and leave its definition to the built-in library and self-defined external libraries in a standardized format. 
+
+For example, we have a query to count the number of cars. User can declare two abstract functions: 1) Object detection: `Frame::objs(frame: Frame) -> List[VObj]`; 2) classification `Car::isintance(obj: VObj) -> bool`, where a `VObj` stores encapsulated information of a video object, like bounding box. These two tasks should be handled by an external machine learning model, which consists of complex tensor computation, but when developing an analytics query, users should directly use it without considering any low-level details. To make a normal python function become an abstract function, users can use the `@model` decorator.
+
+```python
+class Frame:
+  @model
+  def objs(self: Frame) -> List[VObj]: ...
+
+class Car(VObj):
+  @model
+  @staticmethod
+  def isinstance(obj: VObj) -> bool: ...
+
+class CountCarQuery(Query):
+  def __call__(frame: Frame) -> int:
+    results = 0
+    for obj in frame.objs():
+      if Car.isinstance(obj):
+        results += 1
+    return results
+```
+
+VQPy Compiler will take this snippet of code, to associate all model functions with concrete definitions, like pre-trained machine learning models. Some models can finish the tasks of multiple abstract functions. In this example, object detection models can usually give both the bounding box of objects and their classes.
+
+The previous example only takes per-frame properties into consideration. VQPy also supports cross-frame properties. Use the query of counting the number of speeding cars as an example. Here, we use the difference between center of two consecutive bounding boxes as speed. To get speed, we need to store properties in history. To achieve this, VQPy provides `@history` decorator.
+
+```python
+class Car(VObj):
+  @history
+  @model
+  @property
+  def coordinate(self: Car) -> Vector: ...
+
+  @property
+  def speed(self: Car) -> Vector:
+    return self.coordinate.state[-1] - self.coordinate.state[-2]
+
+class CountSpeedingCarQuery(Query):
+  def __call__(frame: Frame) -> int:
+    results = 0
+    for obj in frame.objs():
+      if Car.isinstance(obj) and obj.speed.abs() > 75:
+        results += 1
+    return results
+```
+
+To maintain historical properties, it is required to identify the same video across frames. It implicitly requires a function `VObj::__eq__(self: VObj, other: VObj) -> bool`, which can determine whether two video objects are the same. This can be achieved by object tracking models.
 
 ## Current Progress
 
-TODO(Pengzhan)
+We have finalized the language design and start to writing example queries using this language. We have developed and successfully run two queries - speeding ticket and untagged baggage using the traditional way by connecting models using pure Python.
