--- a/_posts/2022-04-24-team15-vqpy.md
+++ b/_posts/2022-04-24-team15-vqpy.md
@@ -7,7 +7,7 @@ date: 2022-04-24
 ---
 
 
-> Video analytics has been gaining popularity in recent years, due to easier production of videos as well as development in computer vision algorithms and computing hardware. Traditional video analytics pipelines require developers to spend a lot of time on model optimizations, and can be difficult to reuse. Efforts such as SQL-like languages have tried to approach this problem, but also solved part of it, due to restrictions such as limited expressiveness. We propose to implement a Python dialect called VQPy, as an attempt to make video queries easier even for people with no CV-related knowledge, with its familiar programming interface and powerful object-oriented programming model.
+> Video analytics has been gaining popularity in recent years, due to easier production of videos as well as development in computer vision algorithms and computing hardware. Traditional video analytics pipelines require developers to spend a lot of time on model optimizations, and can be difficult to reuse. Efforts such as SQL-like languages have tried to approach this problem, but only solved part of it, due to restrictions such as limited expressiveness. We propose to implement a Python dialect called VQPy, as an attempt to make video queries easier even for people with no CV-related knowledge, with its familiar programming interface and powerful object-oriented programming model.
 
 <!--more-->
 {: class="table-of-content"}
