Update query example to make post consistent

--- a/_posts/2022-04-24-team15-vqpy.md
+++ b/_posts/2022-04-24-team15-vqpy.md
@@ -72,7 +72,7 @@ class CountCarQuery(Query):
 
 VQPy Compiler will take this snippet of code, to associate all model functions with concrete definitions, like pre-trained machine learning models. Some models can finish the tasks of multiple abstract functions. In this example, object detection models can usually give both the bounding box of objects and their classes.
 
-The previous example only takes per-frame properties into consideration. VQPy also supports cross-frame properties. Use the query of counting the number of speeding cars as an example. Here, we use the difference between center of two consecutive bounding boxes as speed. To get speed, we need to store properties in history. To achieve this, VQPy provides `@history` decorator.
+The previous example only takes per-frame properties into consideration. VQPy also supports cross-frame properties. Use the query of showing the plates of speeding cars as an example. Here, we use the difference between center of two consecutive bounding boxes as speed. To get speed, we need to store properties in history. To achieve this, VQPy provides `@history` decorator.
 
 ```python
 class Car(VObj):
@@ -81,16 +81,20 @@ class Car(VObj):
   @property
   def coordinate(self: Car) -> Vector: ...
 
+  @model
+  @property
+  def plate(self: Car) -> str: ...
+
   @property
   def speed(self: Car) -> Vector:
     return self.coordinate.state[-1] - self.coordinate.state[-2]
 
 class CountSpeedingCarQuery(Query):
-  def __call__(frame: Frame) -> int:
-    results = 0
+  def __call__(frame: Frame) -> List[str]:
+    results = []
     for obj in frame.objs():
       if Car.isinstance(obj) and obj.speed.abs() > 75:
-        results += 1
+        results.append(obj.plate)
     return results
 ```
 
@@ -98,7 +102,7 @@ To maintain historical properties, it is required to identify the same video acr
 
 ## Current Progress
 
-We have finalized the language design and start to writing example queries using this language. We have developed and successfully run two queries - speeding ticket and untagged baggage using the traditional way by connecting models using pure Python.
+We have finalized the language design and written example queries using this language. We have developed and successfully run two queries - speeding ticket and untagged baggage using the traditional way by connecting models using pure Python.
 TODO(Pengzhan)
 
 ## References
