--- a/_posts/2022-04-24-team15-vqpy.md
+++ b/_posts/2022-04-24-team15-vqpy.md
@@ -102,8 +102,7 @@ To maintain historical properties, it is required to identify the same video acr
 
 ## Current Progress
 
-We have finalized the language design and written example queries using this language. We have developed and successfully run two queries - speeding ticket and untagged baggage using the traditional way by connecting models using pure Python.
-TODO(Pengzhan)
+We have finalized the language design and written example queries using this language. We have developed and successfully run two queries - speeding ticket and untagged baggage using the traditional way by connecting models using pure Python. The Next step will be building the compiler and runtime system for our language.
 
 ## References
 
